@@ -21,8 +21,9 @@ aptosid-manual-reader (0.2.4) ORPHANED; urgency=low
   * Split loadManual function into smaller subfunctions
   * Added some tests to keep the application from segfaulting if it doesnt find a chapter/id
   * Re-wrote parts of the code to be able to read the new manual structure
+  * Minor changes to allow the reader to display the images and use content.css from the manual
 
- -- Nikolas Poniros <edhunter@aptosid.com>  Tue, 21 Sep 2010 15:24:28 +0200
+ -- Nikolas Poniros <edhunter@aptosid.com>  Thu, 30 Sep 2010 22:17:40 +0200
 
 sidux-manual-reader (0.2.3) unstable; urgency=low
 
